# develop-so-i-24-chp3

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.c
lib/memory/: CMakeLists.txt
lib/memory/include/: memory.h
lib/memory/src/: memory.c
test/: CMakeLists.txt  test_memory.c
